fix: blokkade aan gebruikers bij 3x foutief inloggen bug fixed.
API stuurde zelf een registratie van de poging en web stuurde ook een eige registratie, waardoor er na de eerste login poging 2x geregistreerd wordt in de databse.
